<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string translatable="false" name="facebook_app_id">694373840674926</string>
    <!--
         Números asociados con la libreria Parse para su inicializacion
	     (Ver mas info en la clase CCMApplication.java
    
    <string translatable="false" name="parse_app_id">6iYB10BfMZCaWNOfccmsHEZjn6KZhPVVrNzyv9da</string>
    <string translatable="false" name="parse_client_key">t1LyLjDNlovPqTmhBZJvTjYzsUnYOQl7Qh7yodHs</string>
    -->

    <!-- STRINGS BOTONES -->
    <string translatable="false" name="com_facebook_login_view_com_facebook_login_text">Iniciar Sesion con Facebook</string>
    <string translatable="false" name="com_facebook_login_view_com_facebook_logout_text">Salir</string>
    <string translatable="false" name="login_btn_google">Iniciar Sesión con Google</string>
    <string translatable="false" name="login_btn_twitter">Iniciar Sesión con Twitter</string>
    <string translatable="false" name="app_name">CCM</string>
    <string translatable="false" name="bienvenida">Regístrate con tus redes sociales: </string>
    <string translatable="false" name="bienvenida2">Ó en la plataforma: </string>
    <string translatable="false" name="contrasena">Contraseña</string>
    <string translatable="false" name="registro">Registrar</string>
    <string translatable="false" name="login">Iniciar Sesion</string>
    <string translatable="false" name="alert_aceptar">Aceptar</string>
    <string translatable="false" name="alert_cancelar">Cancelar</string>
    <string translatable="false" name="alert_cerrar_sesion">¿Estas seguro de cerrar sesión?</string>
    <string translatable="false" name="alert_ok">OK, Entendido!</string>
    <string translatable="false" name="alert_cargando">Cargando</string>
    <string translatable="false" name="alert_guardando_usuario">Guardando Usuario...</string>
    <string translatable="false" name="alert_sesion_cerrada">No tienes cuentas abiertas.</string>
    <string translatable="false" name="alert_no_internet">No hay conexión a Internet. Por favor verifica la configuración del dispositivo.</string>
    <string translatable="false" name="alert_no_server">La conexion al servidor ha sido interrumpida. Si el problema persiste contacta al equipo de soporte técnico. Gracias.</string>
    <string translatable="false" name="err_doc_vacio">Por favor digita el documento.</string>
    <string translatable="false" name="err_email_vacio">Por favor digita el correo electrónico.</string>
    <string translatable="false" name="err_campos_vacios">Por favor ingresa los campos correctamente.</string>
    <string translatable="false" name="err_usuario_null">El usuario digitado no existe, por favor reintentar.</string>
    <string translatable="false" name="err_registro">Error al registrarse. Por favor intente de nuevo.</string>
    <string translatable="false" name="hello_world">Hello world!</string>
    <string translatable="false" name="title_activity_splash">SplashActivity</string>
    <string translatable="false" name="dummy_button">Dummy Button</string>
    <string translatable="false" name="dummy_content">DUMMY\nCONTENT</string>
    <string translatable="false" name="title_activity_login">LoginActivity</string>
    <string translatable="false" name="title_activity_registro">Registro</string>
    <string translatable="false" name="action_settings">Settings</string>

    <!-- Strings asociados al CCMActionBarActivity.java -->
    <string translatable="false" name="action_acerca_de">Acerca De</string>
    <string translatable="false" name="action_salir">Salir</string>
    <string translatable="false" name="action_ayuda_tipo_evento">Ayuda</string>

    <!-- Strings Asociados con la actividad LoginNativoActivity.java -->
    <string translatable="false" name="alert_existe_persona">El usuario ya existe, intenta de nuevo.</string>
    <string translatable="false" name="alert_no_existe_persona">El usuario no existe, intenta de nuevo.</string>

    <!-- Strings Asociados con la actividad RegistroActivity.java (Actuan como hints o placeholders) -->
    <string translatable="false" name="tipo_documento">Tipo de Documento: </string>
    <string translatable="false" name="num_documento">No. Documento</string>
    <string translatable="false" name="nombre">Nombre</string>
    <string translatable="false" name="apellidos">Apellidos</string>
    <string translatable="false" name="genero">Género: </string>
    <string translatable="false" name="genero_masculino">Masculino</string>
    <string translatable="false" name="genero_femenino">Femenino</string>
    <string translatable="false" name="fecha_nacimiento">Fecha de Nacimiento: </string>
    <string translatable="false" name="email">email@dominio.com</string>
    <string translatable="false" name="telefono">Teléfono</string>
    <string translatable="false" name="hotel">Hotel de Hospedaje</string>
    <string translatable="false" name="pais_procedencia">País de Procedencia: </string>
    <string translatable="false" name="institucion">Institución: </string>
    <string translatable="false" name="spinner_selecciona_opcion">Selecciona una Opción...</string>
    <string translatable="false" name="title_activity_ccmaction_bar">CCMActionBarActivity</string>
    <string translatable="false" name="alert_registro_redes_sociales">Por favor rellena tu registro con los datos restantes.</string>
    <string translatable="false" name="title_activity_qr">QRActivity</string>

    <!-- Strings asociados al QRCodeActivity.java -->
    <string translatable="false" name="codigo_qr_generado">Tu Código QR Generado es el siguiente: </string>
    <string translatable="false" name="descripcion_codigo_qr">Este código te identifica como participante durante la realización del evento,
        y te permite acceder a los servicios de los almuerzos ofrecidos en el mismo.
</string>
    <string translatable="false" name="siguiente">Siguiente</string>

    <!-- String correspondientes a las pestañas o Tabs de Dias -->
    <string translatable="false" name="tab_lun">Lun</string>
    <string translatable="false" name="tab_mar">Mar</string>
    <string translatable="false" name="tab_mie">Mie</string>
    <string translatable="false" name="tab_jue">Jue</string>
    <string translatable="false" name="tab_vie">Vie</string>

    <!-- String correspondientes a UbicacionesMultiSelectSpinner.java -->
    <string translatable="false" name="guardar">Guardar</string>
    <string translatable="false" name="cancelar">Cancelar</string>

    <!-- String correspondientes a GuardadoEventosUbicRestClientTask.java -->
    <string translatable="false" name="ubicaciones_sync_ok">Ubicaciones sincronizadas exitosamente!</string>
    <string translatable="false" name="title_activity_menu_inicio">Menu</string>

    <!-- Strings de la Actividad MenuInicioActivity.java -->    
    <string translatable="false" name="mis_eventos">Mis Eventos</string>
    <string translatable="false" name="mapa_campus">Mapa del Campus</string>
    <string translatable="false" name="codigo_qr">Mi Código QR</string>
    <string translatable="false" name="bienvenida_usuario">Bienvenido(a)</string>
    <string translatable="false" name="ubicaciones_vacio">No has seleccionado Eventos.
        Para seleccionarlos presiona el boton "Mis Eventos".</string>

</resources>