<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.chatt.Login" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp" >

        <ImageView
            android:id="@+id/logo_congreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_weight="0.20"
            android:src="@drawable/logo_congreso_320x119" />
        
        

        <EditText
            android:id="@+id/email"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/email" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/documento"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_30dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:drawableLeft="@drawable/ic_pwd"
            android:ems="10"
            android:hint="@string/num_documento"
            android:inputType="textPassword" />       

        <Button
            android:id="@+id/btnLogin"
            style="@style/btn_red_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login" />
        

    </LinearLayout>

</ScrollView>