<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="${relativePackage}.${activityClass}" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp" >

        <ImageView
            android:id="@+id/logo_congreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_activity_logo_margin_top"
            android:layout_weight="0.20"
            android:src="@drawable/logo_congreso_320x119"
            android:layout_marginBottom="@dimen/menu_inicio_activity_logo_margin_bottom" />
        
        
        <TextView
            android:id="@+id/textview_nombre_persona"
           	android:layout_width="wrap_content"
           	android:layout_height="wrap_content" 
           	android:textAppearance="?android:attr/textAppearanceLarge"
           	android:layout_marginBottom="@dimen/menu_inicio_activity_textview_margin_bottom"
           	android:text="Bienvenido Usuario" />
            
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/menu_inicio_activity_group_margin_bottom" >
            
            <LinearLayout 
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:orientation="vertical"
            	android:layout_marginRight="@dimen/menu_inicio_activity_group_margin_right" >            	
                <Button 
	                android:id="@+id/btn_eventos"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" 
	                android:layout_gravity="center"               
	                style="@style/btn_eventos" />                
                <TextView 
                    android:id="@+id/textview_mis_eventos"
                    android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	               	android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textSize="@dimen/menu_inicio_activity_txt"
	                android:text="@string/mis_eventos" />                
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:orientation="vertical" >            	
                <Button 
	                android:id="@+id/btn_mapa_campus"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"                
	                style="@style/btn_mapa" />                
                <TextView 
                    android:id="@+id/textview_mapa_campus"
                    android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	               	android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textSize="@dimen/menu_inicio_activity_txt" 
	                android:text="@string/mapa_campus" />                
            </LinearLayout>     
            
      	</LinearLayout>
      	
        
        <LinearLayout 
            android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:orientation="vertical" >            	
               <Button 
                android:id="@+id/btn_codigo_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_gravity="center"               
                style="@style/btn_codigo_qr" />                
               <TextView 
                   android:id="@+id/textview_codigo_qr"
                   android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               	android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/menu_inicio_activity_txt"
                android:text="@string/codigo_qr" />                
           </LinearLayout>
            
        
        
            
        
        
    </LinearLayout>
    
    
    
    

</ScrollView>
